@@ -21,7 +21,7 @@ package org.treetank.nodelayer;
 import static org.junit.Assert.assertEquals;
 
 import org.junit.Test;
-import org.treetank.api.IConstants;
+import org.treetank.utils.IConstants;
 
 public class NamespaceNodeTest {
 
